adds qo more peers

--- a/peers/4009/bitcoin.conf
+++ b/peers/4009/bitcoin.conf
@@ -1,15 +1,14 @@
-# Richard is connected to Meld-Miner
-
 rpcuser=someuser
 rpcpassword=somepass
-port=18333
-rpcport=8333
+port=14009
+rpcport=4009
 listen=1
 regtest=1
 server=1
+ # 4009 adds all others
 
-blocknotify=sh -c "blocknotify 127.0.0.1:17117 bitcoin %s"
 
+connect=localhost:18333
 connect=localhost:18444
 connect=localhost:18555
 connect=localhost:14001
@@ -20,5 +19,5 @@ connect=localhost:14005
 connect=localhost:14006
 connect=localhost:14007
 connect=localhost:14008
-connect=localhost:14009
+
 connect=localhost:14010
