--- a/peers/Alice/bitcoin.conf
+++ b/peers/Alice/bitcoin.conf
@@ -3,5 +3,16 @@ rpcport=8444
 listen=1
 regtest=1
 server=1
- # Alice connects to Richard
+
 connect=localhost:18333
+connect=localhost:18555
+connect=localhost:14001
+connect=localhost:14002
+connect=localhost:14003
+connect=localhost:14004
+connect=localhost:14005
+connect=localhost:14006
+connect=localhost:14007
+connect=localhost:14008
+connect=localhost:14009
+connect=localhost:14010
