adds command to get all peer data at once

--- a/peers/Alice/bitcoin.conf
+++ b/peers/Alice/bitcoin.conf
@@ -4,15 +4,16 @@ listen=1
 regtest=1
 server=1
 
-connect=localhost:18333
+addnode=localhost:18333
+
 connect=localhost:18555
-connect=localhost:14001
-connect=localhost:14002
-connect=localhost:14003
-connect=localhost:14004
-connect=localhost:14005
-connect=localhost:14006
-connect=localhost:14007
-connect=localhost:14008
-connect=localhost:14009
-connect=localhost:14010
+addnode=localhost:14001
+addnode=localhost:14002
+addnode=localhost:14003
+addnode=localhost:14004
+addnode=localhost:14005
+addnode=localhost:14006
+addnode=localhost:14007
+addnode=localhost:14008
+addnode=localhost:14009
+addnode=localhost:14010
